--- a/porocilo/sigproc.bib
+++ b/porocilo/sigproc.bib
@@ -43,3 +43,39 @@ pages = {223--242},
 keywords = {Twitter, hate speech, Internet, policy, machine classification, statistical modeling, cyber hate, ensemble classifier},
 year = {2015},
 }
+
+@Article{Cortes1995,
+	author="Cortes, Corinna
+	and Vapnik, Vladimir",
+	title="Support-vector networks",
+	journal="Machine Learning",
+	year="1995",
+	volume="20",
+	number="3",
+	pages="273--297",
+	abstract="Thesupport-vector network is a new learning machine for two-group classification problems. The machine conceptually implements the following idea: input vectors are non-linearly mapped to a very high-dimension feature space. In this feature space a linear decision surface is constructed. Special properties of the decision surface ensures high generalization ability of the learning machine. The idea behind the support-vector network was previously implemented for the restricted case where the training data can be separated without errors. We here extend this result to non-separable training data.",
+	issn="1573-0565",
+	doi="10.1007/BF00994018",
+	url="http://dx.doi.org/10.1007/BF00994018"
+}
+
+@inproceedings{ho1995random,
+	title={Random decision forests},
+	author={Ho, Tin Kam},
+	booktitle={Document Analysis and Recognition, 1995., Proceedings of the Third International Conference on},
+	volume={1},
+	pages={278--282},
+	year={1995},
+	organization={IEEE}
+}
+
+@article{ho1998random,
+	title={The random subspace method for constructing decision forests},
+	author={Ho, Tin Kam},
+	journal={IEEE transactions on pattern analysis and machine intelligence},
+	volume={20},
+	number={8},
+	pages={832--844},
+	year={1998},
+	publisher={IEEE}
+}
