--- a/porocilo/sigproc.bib
+++ b/porocilo/sigproc.bib
@@ -79,3 +79,28 @@ year = {2015},
 	year={1998},
 	publisher={IEEE}
 }
+
+@inproceedings{Greevy:2004:CRT:1008992.1009074,
+	author = {Greevy, Edel and Smeaton, Alan F.},
+	title = {Classifying Racist Texts Using a Support Vector Machine},
+	booktitle = {Proceedings of the 27th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+	series = {SIGIR '04},
+	year = {2004},
+	isbn = {1-58113-881-4},
+	location = {Sheffield, United Kingdom},
+	pages = {468--469},
+	numpages = {2},
+	url = {http://doi.acm.org/10.1145/1008992.1009074},
+	doi = {10.1145/1008992.1009074},
+	acmid = {1009074},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {SVM, machine learning, text categorisation},
+}
+
+@misc{bworld,
+	howpublished = "\url{http://aiweb.techfak.uni-bielefeld.de/content/bworld-robot-control-software/}",
+	year = {2017}, 
+	note = "[Online; accessed 22-Maj-2017]"
+}
+
